--- a/src/app/components/explore/explore.component.html
+++ b/src/app/components/explore/explore.component.html
@@ -18,7 +18,7 @@
                     <p class="text-2xl font-semibold text-primary pt-8 text-center">{{category}}</p>
                     <div class="flex flex-col items-start mx-4 my-6 sm:m-6 text-xl"
                         *ngFor="let subject of categorizedSubjects[category]">
-                        <button [routerLink]="['/dashboard/explore/study', subject]"
+                        <button [routerLink]="['/dashboard/explore/study', subject]" [queryParams]="{explore: 'true'}"
                             class="hover:text-secondary">{{subject}}</button>
                     </div>
                 </div>
